# hf_asr_bot

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: rust.yml
src/: main.rs
