[package]
name = "hf_asr_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
songbird = "0.2"
serenity = {version = "0.10", features = ["client", "standard_framework", "voice", "rustls_backend"]}
tokio = {version ="1.0", features = ["macros", "rt-multi-thread"]}
tokio-tungstenite = {version = "0.16", features = ["native-tls"]}
serde_json = "1.0"
serde = "1.0"
futures = "0.3"
base64 = "0.13"
